# connect2axum

./: Cargo.toml  README.md  buf.gen.yaml  buf.yaml
.codex/skills/flexstr/: SKILL.md
.codex/skills/uni-error/: SKILL.md
.github/workflows/: ci.yml  release-generators.yml
crates/connect2axum/: Cargo.toml
crates/connect2axum-codegen/: Cargo.toml
crates/connect2axum-codegen/src/: asyncapi.rs  codegen.rs  error.rs  guardrails.rs  http.rs  internal.rs  ir.rs  lib.rs  openapi.rs  options.rs  resolver.rs  rest.rs  shape.rs  ws.rs
crates/connect2axum-codegen/src/internal/: api_names.rs  asyncapi.rs  guardrails.rs  mod.rs  options.rs  resolver.rs  rest.rs  ws.rs
crates/connect2axum-codegen/src/internal/openapi/: config.rs  document.rs  grpc_gateway.rs  mod.rs  model.rs  value.rs
crates/connect2axum-codegen/src/openapi/: comments.rs  config.rs  document.rs  grpc_gateway.rs  mod.rs  model.rs  schema.rs  value.rs
crates/connect2axum-scalar/: Cargo.toml  build.rs
crates/connect2axum-scalar/src/: lib.rs
crates/connect2axum/src/: lib.rs
crates/connect2axum/src/streaming/: http.rs  mod.rs  ws.rs
docs/: asyncapi-generator.md  connectrpc-buffa-pivot-plan.md  openapi-generator.md  phased-greenfield-implementation-plan.md
examples/simple/: Cargo.toml  README.md  connect2openapi.yaml
examples/simple/proto/hello/v1/: hello.proto
examples/simple/src/: lib.rs  main.rs
examples/streaming/: Cargo.toml  README.md  buf.gen.yaml  buf.yaml
examples/streaming/proto/streaming/v1/: streaming.proto
examples/streaming/src/: lib.rs  main.rs
examples/ws-streaming/: Cargo.toml  README.md  buf.gen.yaml  connect2asyncapi.yaml
examples/ws-streaming/proto/streaming/v1/: ws_streaming.proto
examples/ws-streaming/src/: lib.rs  main.rs
