[workspace]
resolver = "2"
members = [
    "crates/connect2axum",
    "crates/connect2axum-codegen",
    "crates/connect2axum-scalar",
    "examples/simple",
    "examples/streaming",
    "examples/ws-streaming",
]

[workspace.package]
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nu11ptr/connect2axum"
repository = "https://github.com/nu11ptr/connect2axum"

[workspace.dependencies]
async-stream = "0.3"
buffa = "0.6"
buffa-codegen = "0.6"
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12", default-features = false, features = ["json-lines"] }
bytes = "1"
connectrpc = { version = "0.6", default-features = false }
connectrpc-codegen = "0.6"
flexstr = { version = "0.11", features = ["std", "str"] }
futures-util = "0.3"
heck = "0.5"
http = "1"
oas3 = { version = "0.22", default-features = false }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = "2"
tokio = "1"
uni_error = "0.11"
