[package]
name = "connect2axum-codegen"
version = "0.1.0"
description = "Code generator for REST/OpenAPI endpoint wrappers over ConnectRPC services"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "connect2axum_codegen"
path = "src/lib.rs"

[[bin]]
name = "protoc-gen-connect2rest"
path = "src/bin/protoc-gen-connect2rest.rs"

[[bin]]
name = "protoc-gen-connect2ws"
path = "src/bin/protoc-gen-connect2ws.rs"

[[bin]]
name = "protoc-gen-connect2openapi"
path = "src/bin/protoc-gen-connect2openapi.rs"

[[bin]]
name = "protoc-gen-connect2asyncapi"
path = "src/bin/protoc-gen-connect2asyncapi.rs"

[dependencies]
buffa.workspace = true
buffa-codegen.workspace = true
connectrpc-codegen.workspace = true
flexstr.workspace = true
heck.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
syn.workspace = true
uni_error.workspace = true
