[package]
name = "connect2axum-codegen"
version = "0.3.0"
description = "Protoc generators for REST, WebSocket, OpenAPI, and AsyncAPI wrappers over ConnectRPC services"
readme = "../../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/connect2axum-codegen"
keywords = ["protobuf", "connectrpc", "openapi", "asyncapi", "axum"]
categories = ["development-tools::build-utils", "web-programming"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "connect2axum_codegen"
path = "src/lib.rs"

[[bin]]
name = "protoc-gen-connect2rest"
path = "src/bin/protoc-gen-connect2rest.rs"

[[bin]]
name = "protoc-gen-connect2ws"
path = "src/bin/protoc-gen-connect2ws.rs"

[[bin]]
name = "protoc-gen-connect2openapi"
path = "src/bin/protoc-gen-connect2openapi.rs"

[[bin]]
name = "protoc-gen-connect2asyncapi"
path = "src/bin/protoc-gen-connect2asyncapi.rs"

[dependencies]
buffa.workspace = true
buffa-codegen.workspace = true
connectrpc-codegen.workspace = true
flexstr.workspace = true
heck.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
syn.workspace = true
uni_error.workspace = true
