[package]
name = "connect2axum"
version = "0.1.0"
description = "Runtime helpers for generated REST/OpenAPI endpoint wrappers over ConnectRPC services"
readme = "../../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
bytes.workspace = true
buffa.workspace = true
connectrpc.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
