[package]
name = "connect2axum"
version = "0.2.0"
description = "Runtime helpers for generated REST and WebSocket wrappers over ConnectRPC services"
readme = "../../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/connect2axum"
keywords = ["axum", "connectrpc", "protobuf", "rest", "websocket"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-stream.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
bytes.workspace = true
buffa.workspace = true
connectrpc.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
