[package]
name = "simple"
version = "0.1.0"
edition = "2024"
publish = false

# Runtime dependencies

[dependencies.axum]
version = "0.8"
default-features = false
features = ["http1", "http2", "json", "query", "tokio"]

[dependencies.buffa]
version = "0.5"
features = ["json"]

[dependencies.connect2axum]
path = "../../crates/connect2axum"

[dependencies.connect2axum-scalar]
path = "../../crates/connect2axum-scalar"

[dependencies.connectrpc]
version = "0.4"
default-features = false
features = ["axum"]

[dependencies.http]
version = "1"

[dependencies.http-body]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "net", "rt-multi-thread"]

# Test dependencies

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.tower]
version = "0.5"
features = ["util"]
